# ChangeLog for net-fs/samba
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-fs/cvs-repo/gentoo-x86/net-fs/samba/ChangeLog,v 1.206 2005/10/03 11:59:36 matsuu Exp $

  03 Oct 2005; MATSUU Takuto <matsuu@gentoo.org> samba-3.0.14a-r2.ebuild:
  Stable on sh.

  23 Sep 2005; Christian Andreetta <satya@gentoo.org>
  samba-3.0.14a-r2.ebuild, samba-3.0.14a-r3.ebuild, samba-3.0.20-r1.ebuild:
  samba-old mirrors also: bug #106676

  03 Sep 2005; Christian Andreetta <satya@gentoo.org> -samba-3.0.20.ebuild,
  samba-3.0.20-r1.ebuild:
  smbmount patch typo fix (bug #104505)

*samba-3.0.20-r1 (02 Sep 2005)

  02 Sep 2005; Christian Andreetta <satya@gentoo.org>
  +samba-3.0.20-r1.ebuild:
  added umount.cifs support (bug #104504)

*samba-3.0.20 (01 Sep 2005)

  01 Sep 2005; Christian Andreetta <satya@gentoo.org> +files/README.gentoo,
  +samba-3.0.20.ebuild:
  version bump (bug #103164). Non-linux compatibility (bug #101675)

  24 Aug 2005; Christian Andreetta <satya@gentoo.org>
  samba-3.0.14a-r2.ebuild, samba-3.0.14a-r3.ebuild:
  'cp -pPR' instead of 'cp -a' required by Darwin and BSD (bug #103487)

  13 Aug 2005; Christian Andreetta <satya@gentoo.org>
  +samba-3.0.14a-r3.ebuild:
  'hide pecial files' option control fix (thanks to Tim Redman, bug #101770)

  09 Aug 2005; Seemant Kulleen <seemant@gentoo.org> -files/lmhosts,
  -files/nsswitch.conf-winbind, -files/nsswitch.conf-wins, -files/samba.pam,
  -files/samba.schema, -files/samba-conf, -files/samba-init,
  -files/smb.conf.example-samba3.gz, -files/smbusers, -files/swat.xinetd,
  -files/system-auth-winbind, samba-3.0.14a-r2.ebuild:
  config files are now moved into the tarball as well. All the patches and
  configs are under version control under the gentoo/src/patchsets/samba
  module

  09 Aug 2005; Seemant Kulleen <seemant@gentoo.org>
  -files/vscan-0.3.5-libclamav.patch, -files/samba-2.2.8-statfs.patch,