@@ -1,9 +1,11 @@
 MD5 befd6e972303040584c4ae13553c32b0 samba-3.0.14a-r2.ebuild 9230
 MD5 c837e49c112f33ecbf1115e70d64366a samba-3.0.20-r1.ebuild 7920
-MD5 53390e4f186f9d687dad7117b4d1dc3e ChangeLog 36425
+MD5 d5af7566e4d4414dc84bae05cfd0bdc2 ChangeLog 36676
 MD5 41299f246433a1a55c8fccc77ccd709e metadata.xml 491
 MD5 72241950493402811f88e16d77dcc69a samba-3.0.14a-r3.ebuild 9241
+MD5 259a6f898dca1d3e7a0d2bf54e779c60 samba-3.0.20a.ebuild 8024
 MD5 a81151c8ce798cbb8498e4e3723dd5bb files/README.gentoo 2458
 MD5 8655ff25f25d7e80f85a5e527d43e94b files/digest-samba-3.0.14a-r2 209
 MD5 15a9e77f4ef8bd8a597b0efe99599337 files/digest-samba-3.0.14a-r3 209
+MD5 101abdf5b841b3e0dc27ab5ae299ff79 files/digest-samba-3.0.20a 209
 MD5 b0edbbe79d56d73a741ab67940725cd5 files/digest-samba-3.0.20-r1 208
