@@ -1,0 +1,3 @@
+MD5 cd181497bc98e039805a95b8c65a16bb samba-3.0.20a.tar.gz 17187979
+MD5 68c9d099d942d85e68d96804b26ac788 samba-vscan-0.3.6.tar.bz2 166733
+MD5 4dbbc143a9b24812e94b2099683f19ed samba-3-gentoo-0.3.8.tar.bz2 16526
